--- a/boardGradle-1/build.gradle
+++ b/boardGradle-1/build.gradle
@@ -16,16 +16,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybaris.spring.boot:mybatis-spring-boot-starter:2.1.3'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'	
+	
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	
-	implementation 'org.mariadb.jadb.jdbc:mariadb-java-client:2.1.2'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 	compile('javax.servlet:jstl')
 	compile('org.apache.tomcat.embed:tomcat-embed-jasper')
-	
+
 	
 }
 
